src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Call_Recording__c</fullName>
        <formula>HYPERLINK(&quot;https://acf.hostedcc.com/html/play.cgi?session_id=&quot;&amp;CallObject, &quot;Play Recording&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Recording</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Time__c</fullName>
        <label>Due Time</label>
        <picklist>
            <picklistValues>
                <fullName>09:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:00 PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Event_ID__c</fullName>
        <label>Recurring Event ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_Event_ID__c</fullName>
        <externalId>true</externalId>
        <label>Google Event ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>acf_Is_Upload_Bank_Stmt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Upload Bank Stmt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acf_Is_Upload_Identity_Verification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Upload Identity Verification</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>